# k8s-observability-mcp

./: .env.example  README.md  config_manager.py  datagraph.py  jaeger_api.py  log_api.py  mcp_server.py  prometheus_api.py  pyproject.toml
api/: __init__.py  base_k8s_client.py  config_manager.py  datagraph.py  jaeger_api.py  k8s_api.py  log_api.py  prometheus_api.py
service-graph/: README.md  astronomy-shop-datagraph.txt  datagraph-playground.ipynb  hotel-reservation-datagraph.txt  social-network-datagraph.txt
