[project]
name = "k8s-observability-mcp"
version = "0.1.0"
description = "A comprehensive Kubernetes observability toolkit built on the Model Context Protocol (MCP) for Site Reliability Engineering."
authors = [
    {name = "martinimarcello00",email = "martinimarcello00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "neo4j (>=6.0.2,<7.0.0)",
    "kubernetes (>=34.1.0,<35.0.0)",
    "prometheus-api-client (>=0.6.0,<0.7.0)",
    "mcp[cli] (>=1.17.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
